# parse-discord

./: .gitignore  .readthedocs.yaml  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
docs/: requirements.txt
docs/source/: conf.py  index.md
parse_discord/: __init__.py  ast.py  emoji.json  emoji.py  emoji.txt  formatting.py  limits.py  parse.py  string.py
tests/: __init__.py  __main__.py  accuracy.py  asterisks.py  backticks.py  core.py  emoji.py  formatting.py  headers.py  links.py  lists.py  mentions.py  quotes.py  spoilers.py  subtext.py  text.py  tilde.py  time.py  underscores.py  utils.py
tools/: update_emoji_txt.py
